fixed hamburger menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,6 @@ figure {
 
 footer {
   flex-shrink: 0;
-  /* height: 15rem;
-  width: 100%;
-  background-color: red; */
 }
 
 .row {
@@ -82,16 +79,18 @@ footer {
 
 .hamburger-menu {
   display: none;
-  width: 50px;
+  width: 25px;
   height: 100%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   z-index: 2;
   transition: all 0.5s;
-  cursor: pointer;
-  /* position: sticky;
-  right: 2rem; */
+}
+
+.hamburger-menu.active {
+  position: fixed;
+  right: 2rem;
 }
 
 .mobile-menu {
